# san-diego-census-dashboard

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  vite.config.mjs
.github/workflows/: pages.yml
docs/: documentation.md  implement.md  plan.md  prompt.md
public/data/: metadata.json  variables.json  years.json
public/data/hexes/: 2022.json  2023.json  2024.json
public/data/tracts/: 2023.json  tracts.geojson
scripts/: verify.mjs
scripts/py/: build_compressed_data.py  build_hexes.py  build_tracts.py  config.py  test_recode_utils.py  utils_acs.py  utils_geo.py  utils_io.py  utils_recode.py
scripts/py/config/: census_recodes.json  census_variables.json
src/: main.jsx
src/app/: App.jsx
src/components/: AboutModal.jsx  DataSourcesModal.jsx  LegendCard.jsx  MapShell.jsx  Modal.jsx  SelectionModeCard.jsx  Sidebar.jsx  WelcomeModal.jsx
src/config/: exploreCatalog.js  profileLayout.js
src/data/: choropleth.js  geography.js  loadData.js  metricStats.js  moe.js  moe.test.mjs
src/ui/: microcopy.js
